# ns

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  Makefile  NM.py  README.md  TODO  __pyproject.toml  _build-dbus.sh  _build-ui.sh  _pyproject.toml  accounts.py  auth.py  build.sh  cockpit_dbus_superuser_client.py  cockpit_dbus_superuser_service.py  commands.py  custom_sub_pages.py  data.txt  deploy.sh  dev_deploy.sh  example.py  example_ipv6_config.txt  exampleservice.py  firewalld.py  firewalld_lib.py  firewalld_page.py  fpga_page.py  index.html  jeepney_example.py  libpam0g-dev_1.5.2-6+deb12u1_arm64.deb  login.py  main.py  main.spec  myapp.spec  networking.py  networking_lib.py  networking_page.py  nginx.conf  (+38 more)
.github/workflows/: build-and-push.yml
.nicegui/: storage-user-3febfecd-1fb1-4095-b296-a7c048e94396.json  storage-user-498eab86-b962-4d70-9eb7-bc82678f7eb5.json  storage-user-845ed3d2-6194-4c37-ae55-148793fcd661.json  storage-user-85beac39-3294-4d34-80c4-ef42bb74ffc7.json  storage-user-9d48c6ff-548b-409c-80e0-e100173779d3.json  storage-user-b3b780d8-f763-414f-9627-d905a2cdb380.json  storage-user-ece7dbbe-484c-4292-bbb9-67b95400f6dc.json
bitstreams/: NOVUS_REFDESIGN.bit
configs/: nginx.conf  ns2-ui.conf  ns2.xml  ntl.go
dbus/: dbus.py
debian/: changelog  control  debhelper-build-stamp  files  install  ns.postinst.debhelper  ns.prerm.debhelper  ns.substvars  ns2-dbus.service  ns2-dev.postrm.debhelper  ns2-dev.substvars  ns2.postrm.debhelper  postinst  postrm  rules
docs/: index.hmtl
example/: example.py
introspection/: org.fedoraproject.FirewallD1.config.xml
lib/: date.py
network_delay_data/: 1768229027_0561452.csv  1768235809_9871051.csv
ns2/: __init__.py  _service.py  common.py  dbus.py  firewalld.py  firewalld_page.py  home_page.py  login.py  main.py  networking.py  networking_page.py  ns_socket.py  ntl.py  ntp.py  pyproject.toml  service.py  snmp.py  snmp_page.py  systemd.py  systemd_tests.py  terminal.py  tests_page.py  udp_server.py  ui.py  utils.py
ns2-dev/: ui.py
ns2-lib/: pyproject.toml
ns2-ui/: build.sh
ns2/.nicegui/: storage-user-3febfecd-1fb1-4095-b296-a7c048e94396.json
ns2/ns2/: accounts.py  dbus.py  main.py  ntp.py  root.py  socket_client.py  systemd_tests.py  utils.py
ns2/ns2/ns2.egg-info/: requires.txt
ns2/src/: main.py  service.py
ns2/src/ns2_lib.egg-info/: PKG-INFO  SOURCES.txt
ns2/src/ns2_service.egg-info/: PKG-INFO  SOURCES.txt
ns2_service/: README.md  build.sh  ns2-dbus.spec  pyproject.toml
ns2_service/ns2_service/: main.py
ns2_service/ns2_service/ns2_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ns2_service/ns2_service/ns2_service.egg-info/: PKG-INFO  SOURCES.txt
ns2_ui/: build.sh  main.py  ns2-ui.spec  pyproject.toml
ns2_ui/.nicegui/: storage-user-3febfecd-1fb1-4095-b296-a7c048e94396.json
ns2_ui/ns2_ui/: accounts.py  firewalld.py  main.py  networking.py  networking_page.py  old_systemd.py  pyproject.toml  snmp_interface.py  snmp_page.py  tests_page.py  utils.py
ns2_ui/ns2_ui/introspection/: org.fedoraproject.FirewallD1.xml
reference/: 1768235829_3152766.csv  auth_flow.txt  org.freedesktop.systemd1.xml  snmpd.conf  snmpd1.conf  socket.xml
scripts/: build-deb.sh  build-machine.sh  build-publish-deb.sh
temp/: dbus.py  firewalld.py  login.py  main.py  networking.py  networking_page.py  ns_dbus_service.py  ns_socket.py  ntp.py  pam_client.py  ping_data_collector.py  requirements.txt  snmp_page.py  speed_test.prof  test.py  theme.py
(+93 files in other folders)
