[project]
name = "ns2"
version = "0.2.14"
description = "Novus Power Products server configuration tool"
authors = [
    {name = "jowens25",email = "jowens@novuspower.com"}
]
#license = {text = "MIT"}
requires-python = ">=3.10,<3.14"


dependencies = [
    "nicegui",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#[project.gui-scripts]
#ns = 'ns2.service:run'


[tool.poetry.scripts]
ns = "ns2.main:main"

#[project.gui-scripts]
#ns = 'ns2.main:main'

#[tool.poetry]
#include = ["assets/**/*", "introspection/**/*"]


[tool.poetry.dependencies]
dbus-next = "^0.2.3"
python-pam = "^2.0.2"
nicegui = "^3.7.1"
six = "^1.17.0"
plotly = "^6.5.2"
pandas = "^3.0.0"