[project]
name = "ns2"
version = "0.3.8"
description = "Novus Power Products server configuration tool"
authors = [
    {name = "jowens25",email = "jowens@novuspower.com"}
]
#license = {text = "MIT"}
requires-python = "==3.12.3"


dependencies = [
    "nicegui",
    "dbus-next>=0.2.3",
    "python-pam",
    "nicegui",
    "six",
    "plotly",
    "pandas>=2.0.0,<2.3.0",
    "numpy>=1.26.0,<2.0.0",
    "pyinstaller>=6.19.0",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
ns2 = 'ns2.main:main'


[tool.uv.pip]
system = true
