[project]
name = "ns2-service"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dbus-next>=0.2.3",
    "ns2>=0.3.9",
    "pyinstaller>=6.19.0",
]

[project.scripts]
ns2-service = 'main:main'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
